Fixed an alignment issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -108,14 +108,13 @@ ul li a:link {
 	#center-header {
 		margin-top: 60px;
 		margin-bottom: 20px;
-		margin-left: 60px;
 		text-align: center;
 		font-size: 30px;
 	}
 
 	.contact-list-item {
 		padding-top: 20px;
-		margin-left: 50px;
+		margin-left: 20px;
 		font-size: 80%;
 	}
 
